--- a/app/assets/stylesheets/react-tagsinput-custom.css
+++ b/app/assets/stylesheets/react-tagsinput-custom.css
@@ -3,15 +3,16 @@
   border: 1px solid #ccc;
   padding-left: 5px;
   padding-top: 6px;
+  margin-left: 2px;
 }
 
 .react-tagsinput-tag {
-  background-color: #5BC0DE;
+  background-color: #5bc0de;
   border-radius: 0;
   color: white;
   float: left;
   font-family: sans-serif;
-  font-size: 14px;
+  font-size: 15px;
   font-weight: 400;
   margin: 0px 5px 5px 0;
   padding: 7px 27px 7px 7px;
@@ -44,13 +45,13 @@
 
 .react-tagsinput-input {
   background: transparent;
-  border: 1px solid #f3f3f3;
-  font-size: 14px;
+  border: 1px solid #e3e3e3;
+  font-size: 15px;
   font-weight: 400;
   outline: none;
   margin: 0px 0 6px 0;
   padding: 5px 5px 7px 7px;
-  width: 120px;
+  width: 150px;
 }
 
 .react-tagsinput-invalid {
@@ -63,14 +64,18 @@
 }
 
 input::-webkit-input-placeholder {
-  color: #aaa;
+  color: #ccc !important;
+  font-weight: 300;
 }
 input:-moz-placeholder { /* Firefox 18- */
-  color: #aaa;
+  color: #ccc !important;
+  font-weight: 300;
 }
 input::-moz-placeholder {  /* Firefox 19+ */
-  color: #aaa;
+  color: #ccc !important;
+  font-weight: 300;
 }
 input:-ms-input-placeholder {
-  color: #aaa;
+  color: #ccc !important;
+  font-weight: 300;
 }
