Set css styles for component AddInput

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,10 +1,6 @@
 /*
  *= require bootstrap/bootstrap-components
- *= require react-tagsinput
+ *= require react-tagsinput-custom
+ *= require typeahead-custom
  *= require global
  */
-
-
-
-
-
