--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -15,3 +15,14 @@
 .testa {
   float: left;
 }
+
+.addinput {
+  outline: none;
+  width: 400px;
+  border: 1px solid white;
+  font-size: 15px;
+  font-weight: 400;
+  margin: 0px 0 6px 3px;
+  padding: 5px 5px 7px 7px;
+  position: absolute;
+}
