--- a/app/assets/stylesheets/global.scss
+++ b/app/assets/stylesheets/global.scss
@@ -16,12 +16,12 @@
   float: left;
 }
 
-.newitem-form {
+.item-form {
   position: absolute;
   display: inline;
 }
 
-.newitem-input {
+.item-input {
   outline: none;
   width: 400px;
   border: 1px solid white;
