Remove typehead, react-tagsinput, unused files

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -7,11 +7,10 @@ html
     = javascript_include_tag 'application', 'data-turbolinks-track' => true, defer: true
     = csrf_meta_tags
   body
-    = render 'layouts/navigation'
-    #main-container.container
-      .row
-        .col-xs-12
-          - flash.each do |name, msg|
-            = content_tag :div, msg, class: "alert alert-dismissible alert-#{name}"
-          / = render 'layouts/searches'
-          = yield
+
+    #material-ui
+
+    - flash.each do |name, msg|
+      = content_tag :div, msg, class: "alert alert-dismissible alert-#{name}"
+    / = render 'layouts/searches'
+    = yield
